syntax = "proto3";

package msg.long;

import "api/msg/msg.proto";

option go_package = "github.com/xiaohuashifu/him/api/msg/long";

// 登录请求
message LoginReq {
    string token = 1; // 凭证
}

// 登录响应
message LoginResp {}

// 发送消息请求
message SendMsgReq {
    msg.Sender sender = 1; // 发送者
    msg.Receiver receiver = 2; // 接收者
    uint64 send_time = 3; // 发送时间
    uint64 correlation_id = 4; // 消息请求唯一标识
    // 消息内容
    oneof content {
        msg.TextMsg text_msg = 5;
        msg.ImageMsg image_msg = 6;
        msg.VoiceMsg voice_msg = 7;
        msg.VideoMsg video_msg = 8;
        msg.FileMsg file_msg = 9;
        msg.WithdrawMsg withdraw_msg = 10;
        msg.TipMsg tip_msg = 11;
        msg.EventMsg event_msg = 12;
    }
}

// 发送消息响应
message SendMsgResp {
    uint64 correlation_id = 1; // 消息请求唯一标识
    uint64 mail_box_msg_id = 2; // 信箱里消息编号
    uint64 msg_id = 3; // 消息编号，递增
}
